# whisper-dictation

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml
debian/: changelog  control  copyright  postinst  rules
scripts/: setup-shortcut.sh  whisper-dictation-setup  whisper-dictation-shortcut  whisper-dictation-toggle
whisper_dictation/: __init__.py  __main__.py  audio.py  config.py  continuous.py  dictation.py  errors.py  history.py  indicator.py  pipeline.py  profiles.py  transcribe.py  tray.py  typing.py  voice_commands.py  wakeword.py
