[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whisper-dictation"
version = "1.0.0"
description = "Speech-to-text dictation for Linux using OpenAI Whisper"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Aung"}
]
keywords = ["whisper", "dictation", "speech-to-text", "stt", "voice", "linux"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
requires-python = ">=3.10"
dependencies = [
    "faster-whisper>=1.0.0",
]

[project.optional-dependencies]
gpu = [
    "torch",
    "nvidia-cublas-cu12",
    "nvidia-cudnn-cu12",
]

[project.urls]
Homepage = "https://github.com/aungmyooo2k17/whisper-dictation"
Repository = "https://github.com/aungmyooo2k17/whisper-dictation"
Issues = "https://github.com/aungmyooo2k17/whisper-dictation/issues"

[project.scripts]
whisper-dictation = "whisper_dictation.dictation:main"
whisper-dictation-indicator = "whisper_dictation.indicator:main"

[tool.setuptools.packages.find]
include = ["whisper_dictation*"]

[tool.setuptools.package-data]
whisper_dictation = ["icons/*.gif"]
